<resources>
    <!-- You can use Ctrl + F to find string -->
    <string name="app_name" translatable="false">onoff-frey-main</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account ?</string>
    <string name="register">Register</string>
    <string name="term_policy_word">By logging in or registering, therefore you agree to</string>
    <string name="we_have_sent_you_word">We’ve sent you a temporary passcode!</string>
    <string name="please_use_passcode_word">Please use the passcode that was sent via SMS to 08*******123</string>
    <string name="verify">verify</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="next">Next</string>
    <string name="or_login_with">or login with</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="and">and</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="term_policy_word_2">the terms of the Onoff Insurance</string>
    <string name="image_view_desc" translatable="false">Display image</string>
    <string name="havent_received_the_code">Haven\'t received the code?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="or_register_with">or register with</string>
    <string name="resend">Resend</string>
    <string name="code_or">code or</string>
    <string name="another_verification">use another verification method</string>
    <string name="english">EN</string>
    <string name="indonesia">INA</string>
    <string name="verification_method_title">Select a different method</string>
    <string name="verification_method_description">Please select one of the following methods \n to receive your temporary passcode</string>
    <string name="verification_method_menu_sms">Send SMS to mobile number</string>
    <string name="verification_method_menu_call">Call mobile number</string>


    <string-array name="cdn">
        <item>il-en-lowcost.png</item>
        <item>il-en-easyclaim.png</item>
        <item>il-en-hourlyprotection.png</item>
    </string-array>
</resources>
