<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="match_parent">

        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/switch1" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:textOn="@string/indonesia"
                android:textOff="@string/english"
                android:thumb="@drawable/shape_rounded_rectangle_switch" android:showText="true"
        />
        <androidx.viewpager.widget.ViewPager
                android:layout_width="match_parent"
                android:layout_height="411dp" android:id="@+id/viewPager"
                app:layout_constraintTop_toBottomOf="@+id/switch1"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="21dp"
                app:layout_constraintBottom_toTopOf="@+id/tabLayout2"/>
        <com.google.android.material.tabs.TabLayout
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:id="@+id/tabLayout2"
                app:tabGravity="center"
                app:tabBackground="@drawable/selector_dot"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="48dp"
                app:tabIndicatorHeight="0dp"
                app:layout_constraintBottom_toTopOf="@+id/button2"/>
        <Button
                android:text="@string/login"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/button2"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:background="@drawable/shape_rounded_rectangle_yellow"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/textView11"/>
        <TextView
                android:text="@string/dont_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                android:textColor="@color/textColorFirst"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintEnd_toStartOf="@+id/textView12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:fontFamily="@font/roboto_condensed_regular"
                android:layout_marginStart="8dp" android:layout_marginEnd="4dp" android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toTopOf="@+id/textView13"/>

        <TextView
                android:text="@string/register"
                android:textColor="@color/colorSecondary"
                android:textSize="@dimen/text_size_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView12"
                app:layout_constraintStart_toEndOf="@+id/textView11"
                android:fontFamily="@font/roboto_condensed_regular" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toTopOf="@+id/textView13"/>
        <TextView
                android:text="@string/term_policy_word"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/textColorSecond"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_condensed_regular"
                android:id="@+id/textView13"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/textView14"/>
        <TextView
                android:text="@string/term_policy_word_2"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/textColorSecond"
                android:fontFamily="@font/roboto_condensed_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView14"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView15"
                android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:text="@string/terms_of_service"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/colorSecondary"
                android:fontFamily="@font/roboto_condensed_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView15"
                app:layout_constraintBaseline_toBaselineOf="@id/textView14"
                app:layout_constraintStart_toEndOf="@+id/textView14"
                app:layout_constraintEnd_toStartOf="@+id/textView16"
                android:layout_marginStart="4dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView16"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/textColorSecond"
                android:fontFamily="@font/roboto_condensed_regular"
                app:layout_constraintBaseline_toBaselineOf="@id/textView14"
                app:layout_constraintStart_toEndOf="@+id/textView15"
                android:text="@string/and"
                app:layout_constraintEnd_toStartOf="@+id/textView17" android:layout_marginStart="5dp"/>
        <TextView
                android:text="@string/privacy_policy"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/colorSecondary"
                android:fontFamily="@font/roboto_condensed_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@id/textView14"
                android:id="@+id/textView17" app:layout_constraintStart_toEndOf="@+id/textView16"
                android:layout_marginStart="4dp"
                app:layout_constraintEnd_toEndOf="parent"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>