<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" >


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_layout_margin">

    <ImageView
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_launcher_background"
            android:id="@+id/ivPhone" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/we_have_sent_you_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSentWord" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="@dimen/text_size_very_big" android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_condensed_regular" android:textColor="@color/textColorSecond"
            app:layout_constraintTop_toBottomOf="@+id/ivPhone"/>
    <TextView
            android:text="@string/please_use_passcode_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvUsePasscodeWord" android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@color/textColorFirst"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@+id/tvSentWord" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="7"
            android:textSize="@dimen/text_size_verification_code"
            android:textColor="@color/textColorSecond"
            android:letterSpacing="1.5"
            android:id="@+id/etVerificationCode" android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@+id/tvUsePasscodeWord"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:id="@+id/btnVerify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:elevation="10dp"
            android:background="@drawable/shape_rounded_rectangle_yellow"
            android:fontFamily="@font/roboto_condensed_regular"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/etVerificationCode" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="Please wait 60 sec to resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_condensed_regular"
            android:id="@+id/tvWaitSecond" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btnVerify" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>