<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" >

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/verification_method_title"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textview1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="38dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_condensed_regular"
                android:textSize="20sp"/>

        <TextView
                android:text="@string/verification_method_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/textView2" android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/textview1" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:fontFamily="@font/roboto_condensed_regular" android:textSize="16sp"/>

        <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:layout_marginTop="20dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" app:cardElevation="16dp" android:id="@+id/cardView1"
                android:outlineAmbientShadowColor="#003DA6" app:cardCornerRadius="6dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="16dp">

                <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp" app:srcCompat="@drawable/ic_verification_sms"
                        android:id="@+id/imageView1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginStart="16dp" android:layout_marginTop="18dp"
                        android:layout_marginBottom="18dp"/>

                <TextView
                        android:text="@string/verification_method_menu_sms"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView3"
                        android:textSize="14sp"
                        android:fontFamily="@font/roboto_condensed_regular"
                        app:layout_constraintStart_toEndOf="@+id/imageView1" android:layout_marginStart="21dp"
                        android:layout_marginTop="13dp" app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                        android:text="0812-3456-7890"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:fontFamily="@font/roboto_condensed_regular"
                        android:layout_height="wrap_content" android:id="@+id/textView4"
                        app:layout_constraintTop_toBottomOf="@+id/textView3"
                        app:layout_constraintStart_toStartOf="@+id/textView3"
                        android:textSize="14sp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/cardView1"
                app:layout_constraintStart_toStartOf="@+id/cardView1"
                app:layout_constraintEnd_toEndOf="@+id/cardView1" android:id="@+id/cardView2"
                app:cardCornerRadius="6dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="16dp">

                <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp" app:srcCompat="@drawable/ic_verification_call"
                        android:id="@+id/imageView2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginStart="16dp" android:layout_marginTop="18dp"
                        android:layout_marginBottom="18dp"/>

                <TextView
                        android:text="@string/verification_method_menu_call"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView5"
                        android:textSize="14sp"
                        app:layout_constraintStart_toEndOf="@+id/imageView2" android:layout_marginStart="21dp"
                        android:layout_marginTop="13dp" app:layout_constraintTop_toTopOf="parent"
                        android:fontFamily="@font/roboto_condensed_regular"/>

                <TextView
                        android:text="0812-3456-7890"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView6"
                        app:layout_constraintTop_toBottomOf="@+id/textView5"
                        app:layout_constraintStart_toStartOf="@+id/textView5"
                        android:textSize="14sp"
                        android:fontFamily="@font/roboto_condensed_regular"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
